--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title:             Clean Blog
-email:             your-email@example.com
+title:             Barry the Cat
+email:             email@example.com
 description:       A Blog Theme by Start Bootstrap
-author:            Start Bootstrap
-baseurl:           "/startbootstrap-clean-blog-jekyll"
-url:               "http://blackrockdigital.github.io"
+author:            jraleman
+baseurl:           "/barry"
+url:               "https://jraleman.com"
 
 # Social Profiles
-twitter_username:  SBootstrap
-github_username:   BlackrockDigital
-facebook_username: StartBootstrap
+#twitter_username:  SBootstrap
+github_username:   jraleman
+#facebook_username: StartBootstrap
 
 # Build settings
 markdown:          kramdown
